--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     ]
   },
   "devDependencies": {
-    "typed-scss-modules": "^7.0.2"
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.4.0",
+    "typed-scss-modules": "^7.0.2",
+    "webpack": "^5.68.0"
   }
 }
