--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.57.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
