(feat/component): rm routes

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://angelrosmend.github.io/card-component-test/",
+  "homepage": "https://angelrosmend.github.io/card-component-test",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
